# simple-rt

./: .gitignore  README.md
weeknd1/: CMakeLists.txt
weeknd1/include/: camera.h  common.h  hittable.h  interval.h  material.h  ray.h  sphere.h
weeknd1/src/: main.cpp
weeknd2/: CMakeLists.txt
weeknd2/include/: aabb.h  bvh.h  camera.h  common.h  hittable.h  interval.h  material.h  medium.h  quad.h  sphere.h  texture.h
weeknd2/src/: main.cpp
weeknd3/include/: camera.h  color.h  common.h  hittable.h  image_loader.h  material.h  medium.h  onb.h  pdf.h  perlin.h  quad.h  ray.h  sphere.h
weeknd3/src/: color.cpp  main.cpp
